# ResearchBot

./: .gitignore  README.md  config.py  config.yaml.example  env_prepare.sh  pyproject.toml  requirements.txt  run.sh  start_chrome_debug.sh
agents/: deep_researcher.py  editor.py  experimenter.py  ideator.py  reviewer.py  scout.py  skeptic.py  writer.py
docs/: BROWSER_LLM_OPTIMIZATION.md
eval/: gates.py
orchestrator/: pipeline.py  state.py
researchbot/: __init__.py  __main__.py  cli.py  config.py  models.py
researchbot/agents/: __init__.py  citation_verifier.py  deai_writer.py  deep_researcher.py  editor.py  experimenter.py  ideator.py  rebuttal_writer.py  reviewer.py  scout.py  self_reviewer.py  skeptic.py  writer.py
researchbot/eval/: __init__.py  gates.py
researchbot/orchestrator/: __init__.py  human_review.py  pipeline.py  state.py
researchbot/scholar/: classifier.py  context_retriever.py  note_generator.py  obsidian_writer.py  zotero_client.py
researchbot/skills/: README.md
researchbot/skills/citation_verifier/: SKILL.md
researchbot/skills/deai_writer/: SKILL.md
researchbot/skills/deep_researcher/: SKILL.md
researchbot/skills/editor/: SKILL.md
researchbot/skills/experimenter/: SKILL.md
researchbot/tools/: __init__.py  browser_daemon.py  browser_llm.py  citations.py  io.py  latex_builder.py  llm.py  rag.py  search.py
skills/deep_researcher/: SKILL.md
skills/editor/: SKILL.md
skills/ideator/: SKILL.md
tools/: browser_llm.py  citations.py  latex_builder.py  llm.py  rag.py  search.py  skills_loader.py
(+13 files in other folders)
